# skytemple-randomizer

./: .editorconfig  .gitignore  .gitmodules  CLI_API.md  Cargo.toml  MANIFEST.in  Makefile  README.rst  build-blp-to-ui.ps1  build-blp-to-ui.sh  build.rs  crowdin.yml  mypy.ini  org.skytemple.Randomizer.appdata.xml  org.skytemple.Randomizer.desktop  pyoxidizer.bzl  pyproject.toml  requirements-dev.txt  requirements-frozen.txt  requirements-mac-windows.txt  requirements.txt  setup.py  skytemple-randomizer-manifest.rc
.github/workflows/: build-test-publish.yml  codeql-analysis.yml  release-info.yml  translations.yml
_custom_build/: _build.ps1  backend.py
android/: .gitignore  Dockerfile  build.py  main.py  requirements-android-dev.txt
android/recipes/armips/: __init__.py
android/recipes/explorerscript/: __init__.py
android/recipes/gitdb/: __init__.py
android/recipes/gitpython/: __init__.py
android/recipes/python-igraph/: __init__.py
android/recipes/semantic-version/: __init__.py
android/recipes/setuptools-rust/: __init__.py
android/recipes/skytemple-files/: __init__.py
android/recipes/skytemple-rust/: __init__.py
android/recipes/smmap/: __init__.py
android/recipes/tilequant/: __init__.py
android/recipes/toml/: __init__.py
android/recipes/typing_extensions/: __init__.py
installer/: .gitignore  README.rst  _build.sh  build-fast.sh  build-fast2.sh  build-mac-arm.sh  build-mac.sh  build-windows.ps1  build-windows.sh  download-windows-dependencies.sh  gen_list_files_for_nsis.py  generate-mo.sh  install-skytemple-components-from-git.sh  project.config  requirements-stage-2.txt  skytemple-randomizer-mac.spec  skytemple-randomizer.nsi  skytemple-randomizer.spec  skytemple-randomizer32.nsi  skytemple_randomizer.nsi  skytemple_randomizer.spec
installer/linux-flatpak/: README.md  generator.py  org.skytemple.Randomizer.yml.jinja  pip-add-extra-dependencies.toml
installer/linux-flatpak/assets/: run.sh
legacy/: org.skytemple.Randomizer.appdata.xml  org.skytemple.Randomizer.desktop
legacy/.github/workflows/: build-test-publish.yml
legacy/installer/: install-skytemple-components-from-git.sh  skytemple-randomizer-mac.spec  skytemple-randomizer.nsi  skytemple-randomizer.spec
legacy/skytemple_randomizer/: spritecollab.py
legacy/skytemple_randomizer/data/: default.json
legacy/skytemple_randomizer/data/fixed_floor_layouts/: 1.txt  100.txt  105.txt  110.txt  112.txt  113.txt  114.txt  116.txt  117.txt  118.txt  119.txt  120.txt  121.txt  122.txt  124.txt  126.txt  128.txt  129.txt  130.txt  132.txt  137.txt  139.txt  14.txt  141.txt  144.txt  145.txt  146.txt  150.txt  151.txt  153.txt  156.txt  159.txt  162.txt  163.txt  165.txt  166.txt  167.txt  168.txt  169.txt  17.txt  (+453 more)
legacy/skytemple_randomizer/frontend/: abstract.py
legacy/skytemple_randomizer/frontend/gtk/: config.py  main.py
legacy/skytemple_randomizer/randomizer/: boss.py  dungeon_unlocker.py  explorer_ranks.py  fixed_room.py  global_items.py  guest.py  monster.py  moveset.py  overworld_music.py  patch_applier.py  portrait_downloader.py  quiz.py  recruitment_table.py  seed_info.py  text_main.py
legacy/skytemple_randomizer/randomizer/common/: items.py
legacy/skytemple_randomizer/randomizer/special/: fun.py
skytemple_randomizer/: config.py  data_dir.py  export_quiz_xml.py  lists.py  main.py  randomizer_thread.py  skytemple_randomizer.css  skytemple_randomizer.glade  spritecollab.py  status.py  string_provider.py
skytemple_randomizer/data/: default.json  vanilla_questions.xml  vanilla_questions.yml
skytemple_randomizer/data/fixed_floor_layouts/: 0.txt  10.txt  101.txt  102.txt  103.txt  104.txt  106.txt  107.txt  108.txt  109.txt  11.txt  111.txt  115.txt  12.txt  123.txt  125.txt  127.txt  13.txt  131.txt  133.txt  134.txt  135.txt  136.txt  138.txt  140.txt  142.txt  143.txt  147.txt  148.txt  149.txt  15.txt  152.txt  154.txt  155.txt  157.txt  158.txt  16.txt  160.txt  161.txt  164.txt  (+449 more)
skytemple_randomizer/data/locale/: org.skytemple.Randomizer.pot
skytemple_randomizer/frontend/: abstract.py
skytemple_randomizer/frontend/cli/: __init__.py  config_argument.py  error.py  info.py  randomize.py  rom_argument.py
skytemple_randomizer/frontend/common_web/: abstract.py  package-lock.json  package.json  webpack.config.js
skytemple_randomizer/frontend/common_web/src/: About.jsx  App.jsx  HelpButton.jsx  ProTip.jsx  RandomizerPanel.jsx  Settings.jsx  UiGridTable.jsx  UiSelect.jsx  UiSlider.jsx  UiSwitch.jsx  UiTextField.jsx  Welcome.jsx  config.jsx  theme.jsx  view.css  view.jsx
skytemple_randomizer/frontend/common_web/view/: view.html.jinja2
skytemple_randomizer/frontend/gtk/: config.py  frontend.py  hacks.py  init_locale.py  macos_keyboard_shim.py  main.py  path.py  settings.py  skytemple_randomizer.css  skytemple_randomizer.glade  skytemple_randomizer.ui  ui_util.py
skytemple_randomizer/frontend/gtk/widgets/: __init__.py  _util.py  banner_update_info.blp  banner_update_info.py  base_dialog_settings.blp  base_dialog_settings.py  dialog_dungeons_individual_settings.blp  dialog_dungeons_individual_settings.py  dialog_items_categories.blp  dialog_items_categories.py  dialog_personality_quiz.blp  dialog_personality_quiz.py  dialog_randomize.blp  dialog_randomize.py  (+71 more)
skytemple_randomizer/frontend/server_based/: main.py
skytemple_randomizer/randomizer/: __init__.py  abstract.py  blind_items_moves.py  boss.py  chapter.py  dungeon.py  dungeon_randomizer.py  dungeon_unlocker.py  explorer_ranks.py  fixed_room.py  global_items.py  ground_actor_randomizer.py  guest.py  iq_tactics.py  location.py  misc.py  monster.py  moveset.py  npc.py  overworld_music.py  patch_applier.py  portrait_downloader.py  quiz.py  recruitment_table.py  seed_info.py  special_pc.py  starter.py  starter_randomizer.py  text_main.py  text_script.py
skytemple_randomizer/randomizer/common/: __init__.py  items.py  weights.py
skytemple_randomizer/randomizer/fixes/: quicksand_pit.py
skytemple_randomizer/randomizer/special/: fun.py
skytemple_randomizer/randomizer/util/: debug.py  util.py
src/: main.rs
(+14 files in other folders)
