[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skytemple-randomizer"
version = "1.6.0"
authors = [
    {name = 'Marco "Capypara" Köpcke', email = "hello@capypara.de"},
    # see About dialog or GitHub contributors list for additional people.
]
description = "Randomizer GUI to randomize the ROM of Pokémon Mystery Dungeon Explorers of Sky"
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["rom-hacking", "game-modding", "skytemple", "gtk", "randomizer"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ndspy >= 3.0.0, < 4.0.0",
    "skytemple-files[spritecollab] >= 1.6.4, < 1.7.0",
    "explorerscript >= 0.1.3",
    "skytemple-icons >= 1.3.2",
    "jsonschema >= 4.1.2",
    "packaging",
    "importlib_metadata>=4.6; python_version < '3.10'"
]

[project.optional-dependencies]
gtk = [
    "pygobject >= 3.44.0",
]

[project.urls]
Homepage = "https://skytemple.org"
Announcements = "https://blog.skytemple.org"
Documentation = "https://wiki.skytemple.org"
Downloads = "https://download.skytemple.org/randomizer"
Changelog = "https://download.skytemple.org/randomizer"
Repository = "https://github.com/SkyTemple/skytemple-randomizer.git"
Issues = "https://github.com/SkyTemple/skytemple-randomizer/issues"
Discord = "https://discord.gg/skytemple"

[project.scripts]
skytemple_randomizer = "skytemple_randomizer.frontend.gtk.main:main"

[tool.setuptools.packages.find]
exclude = ["installer"]

[tool.ruff.lint]
select = [ "W", "E", "F", "ARG"]
