[build-system]
requires = ["setuptools", "pygobject"]
build-backend = "backend"
backend-path = ["_custom_build"]

[project]
name = "skytemple-randomizer"
version = "2.2.0"
authors = [
    { name = 'Marco "Capypara" Köpcke', email = "hello@capypara.de" },
    # see About dialog or GitHub contributors list for additional people.
]
description = "Randomizer GUI to randomize the ROM of Pokémon Mystery Dungeon Explorers of Sky"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["rom-hacking", "game-modding", "skytemple", "gtk", "randomizer"]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click >= 8.1, < 9.0",
    "ndspy >= 3.0.0, < 5.0.0",
    "skytemple-files[spritecollab] >= 1.8.4, < 1.9.0",
    "explorerscript >= 0.2.2",
    "skytemple-icons >= 1.3.2",
    "packaging",
    "importlib_metadata>=4.6; python_version < '3.10'"
]

[project.optional-dependencies]
gtk = [
    "pygobject >= 3.44.0",
]

[project.urls]
Homepage = "https://skytemple.org"
Announcements = "https://blog.skytemple.org"
Documentation = "https://wiki.skytemple.org"
Downloads = "https://download.skytemple.org/randomizer"
Changelog = "https://download.skytemple.org/randomizer"
Repository = "https://github.com/SkyTemple/skytemple-randomizer.git"
Issues = "https://github.com/SkyTemple/skytemple-randomizer/issues"
Discord = "https://discord.gg/skytemple"

[project.scripts]
skytemple_randomizer = "skytemple_randomizer.main:main"

[tool.setuptools]
packages.find.include = ["skytemple_randomizer", "skytemple_randomizer.*"]
packages.find.exclude = ["installer", "blueprint-compiler"]

[tool.setuptools.package-data]
"*" = ["*.ui"]  # Make sure that UI files also get added to the wheel but NOT sdist.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["W", "E", "F"]
ignore = [
    "E402", # Module level import not at top of file -> gi imports may come after gi.require_version.
    "E501", # Line too long. Maybe enable later.
    "F841", # Unused variable: f-string magic
]
